# TorrentClientAll

./: .gitmodules  CMakeLists.txt
Launcher/: CMakeLists.txt  Logger.hpp  main.cpp
Launcher/TorrentFileReader/ReadStrategy/: FullFileRead.hpp
Launcher/src/: Logger.cpp  Logger.hpp  main.cpp
Launcher/src/BencodeParser/: BencodeParser.cpp  BencodeParser.hpp
Launcher/src/TorrentFileParser/: TorrentFileParser.cpp  TorrentFileParser.hpp
Launcher/src/TorrentFileParser/ReadStrategy/: FullFileRead.cpp  FullFileRead.hpp  IReadStrategy.hpp
Launcher/src/TorrentFileReader/: TorrentFileReader.cpp  TorrentFileReader.hpp
Launcher/src/TorrentFileReader/ReadStrategy/: FullFileRead.cpp
Launcher/tests/: BencodeParserTests.cpp  CMakeLists.txt  helper.hpp
tests/: CMakeLists.txt
