cmake_minimum_required(VERSION 3.19)

set(ROOT_DIR ${CMAKE_CURRENT_LIST_DIR})
set(THIRD_PARTY_DIR ${CMAKE_CURRENT_LIST_DIR}/third_party)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/build)
set(CMAKE_OBJECT_PATH ${CMAKE_SOURCE_DIR}/build/obj)

add_subdirectory(Launcher)
